include/bcsv/bcsv_c_api.h

// ============================================================================
// Opaque handles
// ============================================================================
typedef void* bcsv_reader_t;
typedef void* bcsv_writer_t;
typedef void* bcsv_row_t;
typedef void* bcsv_layout_t;
typedef const void* const_bcsv_reader_t;
typedef const void* const_bcsv_writer_t;
typedef const void* const_bcsv_row_t;
typedef const void* const_bcsv_layout_t;
// ============================================================================
// Enums
// ============================================================================

// Column type enum — must match bcsv::ColumnType!
typedef enum {
    BCSV_TYPE_BOOL   = 0,
    BCSV_TYPE_UINT8  = 1,
    BCSV_TYPE_UINT16 = 2,
    BCSV_TYPE_UINT32 = 3,
    BCSV_TYPE_UINT64 = 4,
    BCSV_TYPE_INT8   = 5,
    BCSV_TYPE_INT16  = 6,
    BCSV_TYPE_INT32  = 7,
    BCSV_TYPE_INT64  = 8,
    BCSV_TYPE_FLOAT  = 9,
    BCSV_TYPE_DOUBLE = 10,
    BCSV_TYPE_STRING = 11
} bcsv_type_t;
// File flags — must match bcsv::FileFlags!
typedef enum {
    BCSV_FLAG_NONE            = 0,
    BCSV_FLAG_ZOH             = 1 << 0,  // Zero-order hold row codec
    BCSV_FLAG_NO_FILE_INDEX   = 1 << 1,  // No file index (sequential scan only)
    BCSV_FLAG_STREAM_MODE     = 1 << 2,  // Stream mode (no packets/checksums/footer)
    BCSV_FLAG_BATCH_COMPRESS  = 1 << 3,  // Batch-compressed LZ4 packets
    BCSV_FLAG_DELTA_ENCODING  = 1 << 4,  // Delta + VLE row encoding
} bcsv_file_flags_t;
// ============================================================================
// Version API
// ============================================================================
const char*         bcsv_version        (void);                         // library version string, e.g. "1.5.0"
int                 bcsv_version_major  (void);                         // library major version
int                 bcsv_version_minor  (void);                         // library minor version
int                 bcsv_version_patch  (void);                         // library patch version
// ============================================================================
// Error API
// ============================================================================
const char*         bcsv_last_error     (void);                         // thread-local last error string (empty if no error)
void                bcsv_clear_last_error(void);                        // explicitly reset error state
// ============================================================================
// Layout API
// ============================================================================
// Layouts define the schema (column names and types) of BCSV files.
// They can be shared between readers and writers, modified dynamically,
// cloned, compared for compatibility, and queried.
bcsv_layout_t   bcsv_layout_create          (void);
bcsv_layout_t   bcsv_layout_clone           (const_bcsv_layout_t layout);
void            bcsv_layout_destroy         (bcsv_layout_t layout);
bool            bcsv_layout_has_column      (const_bcsv_layout_t layout, const char* name);
size_t          bcsv_layout_column_count    (const_bcsv_layout_t layout);
size_t          bcsv_layout_column_index    (const_bcsv_layout_t layout, const char* name);
const char*     bcsv_layout_column_name     (const_bcsv_layout_t layout, size_t index);
bcsv_type_t     bcsv_layout_column_type     (const_bcsv_layout_t layout, size_t index);
bool            bcsv_layout_set_column_name (bcsv_layout_t layout, size_t index, const char* name);
void            bcsv_layout_set_column_type (bcsv_layout_t layout, size_t index, bcsv_type_t type);
bool            bcsv_layout_add_column      (bcsv_layout_t layout, size_t index, const char* name, bcsv_type_t type);
void            bcsv_layout_remove_column   (bcsv_layout_t layout, size_t index);
void            bcsv_layout_clear           (bcsv_layout_t layout);
bool            bcsv_layout_is_compatible   (const_bcsv_layout_t layout1, const_bcsv_layout_t layout2);
void            bcsv_layout_assign          (bcsv_layout_t dest, const_bcsv_layout_t src);
size_t          bcsv_layout_column_count_by_type(const_bcsv_layout_t layout, bcsv_type_t type); // count columns of given type
const char*     bcsv_layout_to_string       (const_bcsv_layout_t layout);                       // debug string (thread-local buffer, valid until next call)
// ============================================================================
// Reader API (BCSV binary files)
// ============================================================================
bcsv_reader_t       bcsv_reader_create  (void);
void                bcsv_reader_destroy (bcsv_reader_t reader);
void                bcsv_reader_close   (bcsv_reader_t reader);
bool                bcsv_reader_open    (bcsv_reader_t reader, const char* filename);
bool                bcsv_reader_open_ex (bcsv_reader_t reader, const char* filename, bool rebuild_footer);  // open with optional footer rebuild
bool                bcsv_reader_is_open (const_bcsv_reader_t reader);
const wchar_t*      bcsv_reader_filename(const_bcsv_reader_t reader);
const char*         bcsv_reader_filename(const_bcsv_reader_t reader);
const_bcsv_layout_t bcsv_reader_layout  (const_bcsv_reader_t reader);    // returns layout of opened file, or NULL if not open
bool                bcsv_reader_next    (bcsv_reader_t reader);          // read next row sequentially, returns true if row available
bool                bcsv_reader_read    (bcsv_reader_t reader, size_t index); // random-access read by row index, returns true on success
const_bcsv_row_t    bcsv_reader_row     (const_bcsv_reader_t reader);    // returns reference to internal row (no copy)
size_t              bcsv_reader_index   (const_bcsv_reader_t reader);    // returns current row index (0-based)
size_t              bcsv_reader_count_rows(const_bcsv_reader_t reader);  // total row count from file footer
const char*         bcsv_reader_error_msg       (const_bcsv_reader_t reader);    // per-handle error message
uint8_t             bcsv_reader_compression_level(const_bcsv_reader_t reader);   // compression level of opened file
// ============================================================================
// Writer API (BCSV binary files)
// ============================================================================
bcsv_writer_t       bcsv_writer_create      (bcsv_layout_t layout);           // flat (no row codec) writer
bcsv_writer_t       bcsv_writer_create_zoh  (bcsv_layout_t layout);           // zero-order hold writer
bcsv_writer_t       bcsv_writer_create_delta(bcsv_layout_t layout);           // delta + VLE writer
void                bcsv_writer_destroy (bcsv_writer_t writer);
void                bcsv_writer_close   (bcsv_writer_t writer);
void                bcsv_writer_flush   (bcsv_writer_t writer);
bool                bcsv_writer_open    (bcsv_writer_t writer, const char* filename, bool overwrite, int compress, int block_size_kb, bcsv_file_flags_t flags);
bool                bcsv_writer_is_open (const_bcsv_writer_t writer);
const wchar_t*      bcsv_writer_filename(const_bcsv_writer_t writer);
const char*         bcsv_writer_filename(const_bcsv_writer_t writer);
const_bcsv_layout_t bcsv_writer_layout  (const_bcsv_writer_t writer);             // returns layout
bool                bcsv_writer_next    (bcsv_writer_t writer);                   // writes internal row, returns false on error
bool                bcsv_writer_write   (bcsv_writer_t writer, const_bcsv_row_t row); // writes external row, returns false on error
bcsv_row_t          bcsv_writer_row     (bcsv_writer_t writer);                   // returns reference to internal row (no copy)
size_t              bcsv_writer_index   (const_bcsv_writer_t writer);             // returns rows written so far
const char*         bcsv_writer_error_msg       (const_bcsv_writer_t writer);    // per-handle error message
uint8_t             bcsv_writer_compression_level(const_bcsv_writer_t writer);   // compression level
// ============================================================================
// Row API
// ============================================================================

// Row lifecycle
bcsv_row_t          bcsv_row_create      (const_bcsv_layout_t layout);            // creates a new row with given layout
bcsv_row_t          bcsv_row_clone       (const_bcsv_row_t row);                  // creates a copy of an existing row
void                bcsv_row_destroy     (bcsv_row_t row);                        // destroys a row created with bcsv_row_create
void                bcsv_row_clear       (bcsv_row_t row);                        // clears all values in the row
void                bcsv_row_assign      (bcsv_row_t dest, const_bcsv_row_t src); // assigns src row data to dest row
// Single value access
const_bcsv_layout_t bcsv_row_layout     (const_bcsv_row_t row);                   // returns layout of the row
bool                bcsv_row_get_bool   (const_bcsv_row_t row, int col);
uint8_t             bcsv_row_get_uint8  (const_bcsv_row_t row, int col);
uint16_t            bcsv_row_get_uint16 (const_bcsv_row_t row, int col);
uint32_t            bcsv_row_get_uint32 (const_bcsv_row_t row, int col);
uint64_t            bcsv_row_get_uint64 (const_bcsv_row_t row, int col);
// Debug
const char*         bcsv_row_to_string  (const_bcsv_row_t row);                   // debug string (thread-local buffer, valid until next call)
// Column count
size_t              bcsv_row_column_count(const_bcsv_row_t row);                   // number of columns in this row's layout
// Return the compact data size in bytes for a single row (sum of fixed-size
// column widths — excludes strings).  Useful for buffer pre-allocation.
size_t              bcsv_layout_row_data_size   (const_bcsv_layout_t layout);
// Retrieve file flags as reported by the reader (only valid after open).
int                 bcsv_reader_file_flags      (const_bcsv_reader_t reader);